==> SevenIsGood/5509/5509A/c55_lp/c55_csl_3.08.01/demos/voice_ui_cloud/cc3220/IBM_Voice_UI_Demo_CC3220SF_LAUNCHXL/src/LcdDriver/Sharp96x96.c <==
#include "grlib.h"
#include "Sharp96x96utils.h"
#include "Sharp96x96.h"
#include "Board.h"
#define SPI_IF_BIT_RATE  4000000

void
Sharp96x96_LCDInit(void)
{
#if !ENABLE_C5545_PIN_SETTINGS
	///eUSCI_SPI_MasterConfig config =
       ///     {
       ///             EUSCI_B_SPI_CLOCKSOURCE_SMCLK,
         ///                           12000000,
         ///                           6000000,
         ///                           EUSCI_B_SPI_MSB_FIRST,
         ///                           EUSCI_B_SPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT,
         ///                           EUSCI_B_SPI_CLOCKPOLARITY_INACTIVITY_LOW,
         ///                           EUSCI_B_SPI_3PIN
         ///   };

    // ----Configure SPI Pins are UCB0 on P1.5, P1.6
    /* TIRTOS - all init and config handled by TI drivers, just need to call SPI_init() and SPI_open() */
    ////MAP_PRCMPeripheralClkEnable(PRCM_GSPI, PRCM_RUN_MODE_CLK);
    ////MAP_PinTypeSPI(PIN_05, PIN_MODE_7);
    ////MAP_PinTypeSPI(PIN_07, PIN_MODE_7);
    // Pin 8 as GSPI CS, Not as GPIO. Jumper this to Pin 59 on Header 1 (the unconnected * pin)
    ////MAP_PinTypeSPI(PIN_08, PIN_MODE_7);
    // Debug - add pin 6 as MISO
    ////MAP_PinTypeSPI(PIN_06, PIN_MODE_7);
    /* Not working atm, use driverlib directly for SPI */
    SPI_Params params;
    SPI_Params_init(&params);
    params.transferMode = SPI_MODE_BLOCKING;
    params.bitRate = SPI_IF_BIT_RATE;
    params.dataSize = 8;
    params.frameFormat = SPI_POL0_PHA0;
    params.mode = SPI_MASTER;
    lcdSPIHandle = SPI_open(CC3220SF_LAUNCHXL_SPI1,&params);



    // ----Configure output pin for DISP (pin 61)
    /* TIRTOS - All GPIO config is handled by GPIO_init(), called in main task */
    ////MAP_PRCMPeripheralClkEnable(PRCM_GPIOA0, PRCM_RUN_MODE_CLK);
    ////MAP_PinModeSet(CC3220_GPIO6_PACKAGE_PIN, PIN_MODE_0);
    ////MAP_GPIODirModeSet(CC3220_GPIO6_BASE, CC3220_GPIO6_MASK, GPIO_DIR_MODE_OUT);
    ////MAP_PinTypeGPIO(CC3220_GPIO6_PACKAGE_PIN, PIN_MODE_0, false);
    // Set DISP pin
    ////MAP_GPIOPinWrite(CC3220_GPIO6_BASE, CC3220_GPIO6_MASK,1<<(CC3220_GPIO6_NUMBER%8));
    GPIO_write(CC3220SF_LAUNCHXL_GPIO_LCD_DISP,1);

    // ----Configure output pin for POWER (pin 58)
    ////MAP_PinModeSet(CC3220_GPIO3_PACKAGE_PIN, PIN_MODE_0);
    ////MAP_GPIODirModeSet(CC3220_GPIO3_BASE, CC3220_GPIO3_MASK, GPIO_DIR_MODE_OUT);
    ////MAP_PinTypeGPIO(CC3220_GPIO3_PACKAGE_PIN, PIN_MODE_0, false);
    // Set DISP pin
    ////MAP_GPIOPinWrite(CC3220_GPIO3_BASE, CC3220_GPIO3_MASK,1<<(CC3220_GPIO3_NUMBER%8));
    GPIO_write(CC3220SF_LAUNCHXL_GPIO_LCD_POWER,1);



    // ----Configure CS Pin as P4.3 = SPI_CS (pin 8 jumper'd to pin59(left)/Launchpad header pin 6)
    /* TIRTOS - CS signal is setup and controlled by the drivers */
    /* TIRTOS - CS signal is GPIO 9. Need to use GPIO_write to toggle CS. Acitve high */
    ////MAP_PinModeSet(CC3220_GPIO0_PACKAGE_PIN, PIN_MODE_0);
    ////MAP_GPIODirModeSet(CC3220_GPIO0_BASE, CC3220_GPIO0_MASK, GPIO_DIR_MODE_OUT);
    ////MAP_PinTypeGPIO(CC3220_GPIO0_PACKAGE_PIN, PIN_MODE_0, false);
    // Set CS Pin
    ////MAP_GPIOPinWrite(CC3220_GPIO0_BASE, CC3220_GPIO0_MASK,0);
    GPIO_write(CC3220SF_LAUNCHXL_GPIO_LCD_CS,0);
    ////MAP_SPIDisable(GSPI_BASE);
    ////MAP_SPIReset(GSPI_BASE);
    ////MAP_SPIConfigSetExpClk(GSPI_BASE,MAP_PRCMPeripheralClockGet(PRCM_GSPI),
        ////                 SPI_IF_BIT_RATE,SPI_MODE_MASTER,SPI_SUB_MODE_0,
        ////                 (SPI_SW_CTRL_CS |
        ////                 SPI_4PIN_MODE |
        ////                 SPI_TURBO_OFF |
        ////                 SPI_CS_ACTIVEHIGH |
        ////                 SPI_WL_8));
    ////MAP_SPIWordCountSet(GSPI_BASE, 0);
    ////MAP_SPIEnable(GSPI_BASE);
    ////MAP_SPICSDisable(GSPI_BASE);

#endif

}

static void
Sharp96x96_Flush (void *pvDisplayData)
{
#if !ENABLE_C5545_PIN_SETTINGS
    /* volatile */ int iii;
    unsigned char *pucData = &DisplayBuffer[0][0];
	long xi =0;
	long xj = 0;
	////unsigned long ulDummy;
	SPI_Transaction transaction;
	transaction.count = 1;
	transaction.arg = 0;
	transaction.rxBuf = 0;
	//image update mode(1X000000b)
	unsigned char command = SHARP_LCD_CMD_WRITE_LINE;

	//COM inversion bit
//	command = command^VCOMbit;
	////MAP_SPICSEnable(GSPI_BASE);
	GPIO_write(CC3220SF_LAUNCHXL_GPIO_LCD_CS,1);
	////WriteCmdData(command);
	transaction.txBuf = (void *)&command;
	SPI_transfer(lcdSPIHandle,&transaction);
	////MAP_SPIDataGet(GSPI_BASE,&ulDummy);
	//MAP_SPICSDisable(GSPI_BASE);


	//MAP_SPIDataGet(GSPI_BASE,&ulDummy);
//	flagSendToggleVCOMCommand = SHARP_SKIP_TOGGLE_VCOM_COMMAND;
#ifdef LANDSCAPE
	for(xj=0; xj<LCD_VERTICAL_MAX; xj++)
		{
	    //MAP_SPICSEnable(GSPI_BASE);
		  ////WriteCmdData(reverse(xj + 1));
		  command = reverse(xj + 1);
		  SPI_transfer(lcdSPIHandle,&transaction);
		  ////MAP_SPIDataGet(GSPI_BASE,&ulDummy);

		  for(xi=0; xi<(LCD_HORIZONTAL_MAX>>3); xi++)
		  {
		      //MAP_SPICSEnable(GSPI_BASE);
			////WriteCmdData(*(pucData++));
			command = *(pucData++);
			SPI_transfer(lcdSPIHandle,&transaction);
			////MAP_SPIDataGet(GSPI_BASE,&ulDummy);
		  }
		  //MAP_SPICSEnable(GSPI_BASE);
		  ////WriteCmdData(SHARP_LCD_TRAILER_BYTE);
		  command = SHARP_LCD_TRAILER_BYTE;
		  SPI_transfer(lcdSPIHandle,&transaction);
		  ////MAP_SPIDataGet(GSPI_BASE,&ulDummy);
		}
#endif
#ifdef LANDSCAPE_FLIP
	pucData = &DisplayBuffer[LCD_VERTICAL_MAX-1][(LCD_HORIZONTAL_MAX>>3)-1];

	for(xj=1; xj<=LCD_VERTICAL_MAX; xj++)
	{
		WriteCmdData(reverse(xj));

	  for(xi=0; xi < (LCD_HORIZONTAL_MAX>>3); xi++)
	  {
		WriteCmdData(reverse(*pucData--));
	  }
	  WriteCmdData(SHARP_LCD_TRAILER_BYTE);
	}
#endif
	////WriteCmdData(SHARP_LCD_TRAILER_BYTE);
	command = SHARP_LCD_TRAILER_BYTE;
	SPI_transfer(lcdSPIHandle,&transaction);
	////MAP_SPIDataGet(GSPI_BASE,&ulDummy);
	// Wait for last byte to be sent, then drop SCS
	///WaitUntilLcdWriteFinished();

  // Wait for last byte to be sent, then drop SCS
	/* This seems very inelegant */
  for ( iii =0;iii<(MCLK_FREQUENCY * 2);iii++);

	// Set P4.3 Low for CS
	///GPIO_setOutputLowOnPin(LCD_SPI_CS_PIN_PORT, LCD_SPI_CS_PIN);
  //MAP_GPIOPinWrite(CC3220_GPIO0_BASE, CC3220_GPIO0_MASK,0);
  ////MAP_SPICSDisable(GSPI_BASE);
	GPIO_write(CC3220SF_LAUNCHXL_GPIO_LCD_CS,0);
#endif
}

static void
Sharp96x96_ClearScreen (void *pvDisplayData, uint16_t  ulValue)
{
#if !ENABLE_C5545_PIN_SETTINGS
  /* volatile */ int iii;
  ////unsigned long ulDummy;
  SPI_Transaction transaction;
  transaction.count = 1;
  transaction.arg = 0;
  transaction.rxBuf = 0;
  unsigned char command = SHARP_LCD_CMD_CLEAR_SCREEN;						    //clear screen mode(0X100000b)
//  command = command^VCOMbit;					//COM inversion bit
  transaction.txBuf = (void *)&command;
  //MAP_GPIOPinWrite(CC3220_GPIO0_BASE, CC3220_GPIO0_MASK,1<<(CC3220_GPIO0_NUMBER%8));
  ////MAP_SPICSEnable(GSPI_BASE);
  GPIO_write(CC3220SF_LAUNCHXL_GPIO_LCD_CS,1);

  ////WriteCmdData(command);
  SPI_transfer(lcdSPIHandle,&transaction);
  ////MAP_SPIDataGet(GSPI_BASE,&ulDummy);
//  flagSendToggleVCOMCommand = SHARP_SKIP_TOGGLE_VCOM_COMMAND;
  ////WriteCmdData(SHARP_LCD_TRAILER_BYTE);
  command = SHARP_LCD_TRAILER_BYTE;
  SPI_transfer(lcdSPIHandle,&transaction);
  ////MAP_SPIDataGet(GSPI_BASE,&ulDummy);

	// Wait for last byte to be sent, then drop SCS
	///WaitUntilLcdWriteFinished();

  // Wait for last byte to be sent, then drop SCS
  for ( iii =0;iii<(MCLK_FREQUENCY * 2);iii++);


  ///GPIO_setOutputLowOnPin(LCD_SPI_CS_PIN_PORT, LCD_SPI_CS_PIN);
  //MAP_GPIOPinWrite(CC3220_GPIO0_BASE, CC3220_GPIO0_MASK,0);
  ////MAP_SPICSDisable(GSPI_BASE);
  GPIO_write(CC3220SF_LAUNCHXL_GPIO_LCD_CS,0);
  
  Sharp96x96_InitializeDisplayBuffer(pvDisplayData, ulValue);
#endif
}
