==> garonimo/labo_incrustados/MSP-EXP432P401R_Software_Examples_linux/Firmware/Source/430BOOST-SHARP96_GrlibExample_MSP432P401R/LcdDriver/Sharp96x96.c <==
#include "grlib.h"
#include "Sharp96x96utils.h"
#include "Sharp96x96.h"
#include "driverlib.h"
#define LCD_DISP_PIN_PORT      GPIO_PORT_P4
#define LCD_DISP_PIN           GPIO_PIN1
#define LCD_SPI_CS_PIN_PORT    GPIO_PORT_P4
#define LCD_SPI_CS_PIN         GPIO_PIN3
#define LCD_POWER_PIN_PORT     GPIO_PORT_P6
#define LCD_POWER_PIN          GPIO_PIN0

void
Sharp96x96_LCDInit(void)
{
	eUSCI_SPI_MasterConfig config =
            {
                    EUSCI_B_SPI_CLOCKSOURCE_SMCLK,
                                    12000000,
                                    6000000,
                                    EUSCI_B_SPI_MSB_FIRST,
                                    EUSCI_B_SPI_PHASE_DATA_CAPTURED_ONFIRST_CHANGED_ON_NEXT,
                                    EUSCI_B_SPI_CLOCKPOLARITY_INACTIVITY_LOW,
                                    EUSCI_B_SPI_3PIN
            };

    // ----Configure SPI Pins are UCB0 on P1.5, P1.6

    // Pin 1.5 = UCB0_SPI_CLK
    GPIO_setAsPeripheralModuleFunctionOutputPin( GPIO_PORT_P1, GPIO_PIN5, GPIO_PRIMARY_MODULE_FUNCTION);
    // Pin 1.6 = UCB0_SPI_SIMO
    GPIO_setAsPeripheralModuleFunctionOutputPin( GPIO_PORT_P1, GPIO_PIN6, GPIO_PRIMARY_MODULE_FUNCTION);


    // ----Configure output pin for DISP
    GPIO_setAsOutputPin(LCD_DISP_PIN_PORT, LCD_DISP_PIN);
    // Set DISP pin
    GPIO_setOutputHighOnPin(LCD_DISP_PIN_PORT, LCD_DISP_PIN);

    // ----Configure output pin for POWER
    GPIO_setAsOutputPin( LCD_POWER_PIN_PORT, LCD_POWER_PIN);
    // Set DISP pin
    GPIO_setOutputHighOnPin(LCD_POWER_PIN_PORT, LCD_POWER_PIN);

    // ----Configure CS Pin as P4.3 = SPI_CS
    GPIO_setAsOutputPin( LCD_SPI_CS_PIN_PORT, LCD_SPI_CS_PIN);
    // Set CS Pin
    GPIO_setOutputLowOnPin(LCD_SPI_CS_PIN_PORT, LCD_SPI_CS_PIN);

    SPI_initMaster(EUSCI_B0_BASE, &config);


    SPI_enableModule(EUSCI_B0_BASE);


}

static void
Sharp96x96_Flush (void *pvDisplayData)
{
    volatile int iii;
unsigned char *pucData = &DisplayBuffer[0][0];
	long xi =0;
	long xj = 0;
	//image update mode(1X000000b)
	unsigned char command = SHARP_LCD_CMD_WRITE_LINE;

	//COM inversion bit
	command = command^VCOMbit;
	// Set P4.3 High for CS
	GPIO_setOutputHighOnPin(LCD_SPI_CS_PIN_PORT, LCD_SPI_CS_PIN);

	WriteCmdData(command);
	flagSendToggleVCOMCommand = SHARP_SKIP_TOGGLE_VCOM_COMMAND;
#ifdef LANDSCAPE
	for(xj=0; xj<LCD_VERTICAL_MAX; xj++)
		{
		  WriteCmdData(reverse(xj + 1));

		  for(xi=0; xi<(LCD_HORIZONTAL_MAX>>3); xi++)
		  {
			WriteCmdData(*(pucData++));
		  }
		  WriteCmdData(SHARP_LCD_TRAILER_BYTE);
		}
#endif
#ifdef LANDSCAPE_FLIP
	pucData = &DisplayBuffer[LCD_VERTICAL_MAX-1][(LCD_HORIZONTAL_MAX>>3)-1];

	for(xj=1; xj<=LCD_VERTICAL_MAX; xj++)
	{
		WriteCmdData(reverse(xj));

	  for(xi=0; xi < (LCD_HORIZONTAL_MAX>>3); xi++)
	  {
		WriteCmdData(reverse(*pucData--));
	  }
	  WriteCmdData(SHARP_LCD_TRAILER_BYTE);
	}
#endif

	WriteCmdData(SHARP_LCD_TRAILER_BYTE);

	// Wait for last byte to be sent, then drop SCS
	WaitUntilLcdWriteFinished();

  // Wait for last byte to be sent, then drop SCS
  for ( iii =0;iii<(MCLK_FREQUENCY * 2);iii++);

	// Set P4.3 Low for CS
	GPIO_setOutputLowOnPin(LCD_SPI_CS_PIN_PORT, LCD_SPI_CS_PIN);
}

static void
Sharp96x96_ClearScreen (void *pvDisplayData, uint16_t  ulValue)
{
  volatile int iii;
  unsigned char command = SHARP_LCD_CMD_CLEAR_SCREEN;						    //clear screen mode(0X100000b)
  command = command^VCOMbit;					//COM inversion bit

  GPIO_setOutputHighOnPin(LCD_SPI_CS_PIN_PORT, LCD_SPI_CS_PIN);

  WriteCmdData(command);
  flagSendToggleVCOMCommand = SHARP_SKIP_TOGGLE_VCOM_COMMAND;
  WriteCmdData(SHARP_LCD_TRAILER_BYTE);

	// Wait for last byte to be sent, then drop SCS
	WaitUntilLcdWriteFinished();

  // Wait for last byte to be sent, then drop SCS
  for ( iii =0;iii<(MCLK_FREQUENCY * 2);iii++);


  GPIO_setOutputLowOnPin(LCD_SPI_CS_PIN_PORT, LCD_SPI_CS_PIN);
  
  Sharp96x96_InitializeDisplayBuffer(pvDisplayData, ulValue);

}
